package adapter;

/**
 * @author ioeah
 * @version 1.0
 * @date 2023/3/22 16:56
 */
public interface Cat {

    void cry();

    void catchMouse();
}
