package adapter;

/**
 * @author ioeah
 * @version 1.0
 * @date 2023/3/22 16:57
 */
public interface Dog {

    void wang();

    void action();
}
